welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:3: error: missing arguments for method || in class Boolean;
follow this method with `_' if you want to treat it as a partially applied function
  	if(day==1 || day==2 || day==3 || day==4 || day=5){
                                                ^alarmClock:9: error: missing arguments for method || in class Boolean;
follow this method with `_' if you want to treat it as a partially applied function
    if(day==1 || day==2 || day==3 || day==4 || day=5){
                                            ^